--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import "~antd/dist/antd.css";
 .App {
   text-align: center;
 }
@@ -35,4 +36,21 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.form {
+  display: inline-block;
+  padding: 20px;
+}
+.row {
+  min-height: 300px;
+  position: relative;
+  text-align: center;
+}
+.buttons {
+  margin: 2rem auto;
+  display: block;
+}
+.inputss {
+  margin: 1rem;
 }
